tests/NormalTests/paczka1/fuzzy1/13638064.err
Error in line 16: 5MEd S72 242,16
Error in line 13: s7ZIp S72 82,9
Error in line 22: mwmF6 S66 83,5
Error in line 23: S66 S72 55,4
Error in line 24: mwmF6 A824 68,0
Error in line 28: mwmF6 S66 62,5
Error in line 35: eVA S72 36,7
